--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 		<spring.version>4.2.4.RELEASE</spring.version>
 		<spring.social.version>1.1.4.RELEASE</spring.social.version>
 		<spring.security.version>4.0.3.RELEASE</spring.security.version>
-		<log4j.version>2.4.1</log4j.version>
+		<log4j.version>1.2.17</log4j.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -227,19 +227,14 @@
 			<version>5.1.37</version>
 		</dependency>
 		<dependency>
-			<groupId>org.apache.logging.log4j</groupId>
-			<artifactId>log4j-web</artifactId>
+			<groupId>log4j</groupId>
+			<artifactId>log4j</artifactId>
 			<version>${log4j.version}</version>
 		</dependency>
 		<dependency>
-			<groupId>org.apache.logging.log4j</groupId>
-			<artifactId>log4j-api</artifactId>
-			<version>${log4j.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.apache.logging.log4j</groupId>
-			<artifactId>log4j-core</artifactId>
-			<version>${log4j.version}</version>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-log4j12</artifactId>
+			<version>1.7.13</version>
 		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
