--- a/pom.xml
+++ b/pom.xml
@@ -11,8 +11,10 @@
 		<spring.version>4.2.4.RELEASE</spring.version>
 		<spring.social.version>1.1.4.RELEASE</spring.social.version>
 		<spring.security.version>4.0.3.RELEASE</spring.security.version>
-		<jackson.mapper.version>1.9.13</jackson.mapper.version>
+		<jackson.mapper.version>1.9.2</jackson.mapper.version>
+		<aspectj.version>1.6.11</aspectj.version>
 		<log4j.version>1.2.17</log4j.version>
+		<slf4j.version>1.7.13</slf4j.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -156,6 +158,21 @@
 			<version>${spring.version}</version>
 		</dependency>
 		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-aop</artifactId>
+			<version>${spring.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.aspectj</groupId>
+			<artifactId>aspectjrt</artifactId>
+			<version>${aspectj.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.aspectj</groupId>
+			<artifactId>aspectjweaver</artifactId>
+			<version>${aspectj.version}</version>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework.data</groupId>
 			<artifactId>spring-data-jpa</artifactId>
 			<version>1.9.2.RELEASE</version>
@@ -238,7 +255,17 @@
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-log4j12</artifactId>
-			<version>1.7.13</version>
+			<version>${slf4j.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+			<version>${slf4j.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>jul-to-slf4j</artifactId>
+			<version>${slf4j.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
