--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,5 +1,5 @@
 # Root logger option
-log4j.rootLogger=DEBUG, stdout 
+log4j.rootLogger=TRACE, stdout 
 #, file
 
 # Redirect log messages to console
